# mini-games

./: .gitignore  Cargo.toml  bench.sh  build_all.sh  deploy.sh  renew_cert.sh  run_test.sh  snake_game_client_config.yaml
.github/workflows/: deploy-pages.yml  release.yml
client/: Cargo.toml
client/src/: client.rs  command_sender.rs  config.rs  constants.rs  file_association.rs  game_render.rs  game_ui.rs  grpc_client.rs  main.rs  menu_ui.rs  replay_playback.rs  settings.rs  sprites.rs  state.rs  ui.rs  username_prompt.rs
client/src/config/: game_type.rs  mod.rs  replay_config.rs  server_config.rs
client/src/game_ui/: mod.rs  snake.rs
client/src/game_ui/snake/: mod.rs
client/src/game_ui/tictactoe/: mod.rs
client/src/offline/: broadcaster.rs  local_game.rs  mod.rs  snake_runner.rs  tictactoe_runner.rs
client/src/ui/: colors.rs  menu.rs  sprites.rs
client/src/ui/game/: game_ui.rs  mod.rs  snake.rs
common/: Cargo.toml  build.rs
common/benches/: minimax_bench.rs
common/proto/: game_service.proto  replay.proto  snake.proto  snake_game.proto  tictactoe.proto
common/src/: config.rs  defaults.rs  id_generator.rs  identifiers.rs  lib.rs  logger.rs  validate_lobby_settings.rs  version.rs
common/src/config/: config_content_provider.rs  config_manager.rs  config_serializer.rs  mod.rs
common/src/engine/: mod.rs
common/src/engine/session/: mod.rs  snake_session.rs  tictactoe_session.rs
common/src/engine/snake/: bot.rs  game_state.rs  mod.rs
common/src/engine/tictactoe/: board.rs  bot.rs  game_state.rs  mod.rs  types.rs  win_detector.rs
common/src/games/: bot_type.rs  broadcaster.rs  game_session.rs  lobby_settings.rs  mod.rs  replay_mode.rs  resolver.rs  session_config.rs  session_rng.rs
common/src/games/numbers_match/: board.rs  game_state.rs  mod.rs  session.rs  settings.rs  types.rs  validate.rs
common/src/games/puzzle2048/: game_state.rs  mod.rs  session.rs  settings.rs  types.rs  validate.rs
common/src/games/snake/: bot_controller.rs  entity.rs  game_state.rs  mod.rs  session.rs  settings.rs  types.rs  validate.rs
common/src/games/stack_attack/: box_entity.rs  crane.rs  field.rs  game_state.rs  mod.rs  session.rs  settings.rs  types.rs  validate.rs  worker.rs
common/src/games/tictactoe/: board.rs  bot_controller.rs  game_state.rs  mod.rs  session.rs  settings.rs  types.rs  validate.rs  win_detector.rs
common/src/lobby/: bot_type.rs  identity.rs  mod.rs  settings.rs  state.rs  types.rs
common/src/replay/: file_io.rs  mod.rs  player.rs  recorder.rs
common/src/validation/: mod.rs  snake.rs  tictactoe.rs
deploy/: mini-games-server.service  nginx.conf  snake-game-server.service
desktop-client/: Cargo.toml
desktop-client/src/: grpc_client.rs  replay_playback.rs  state.rs
desktop-client/src/config/: game_type.rs  main_config.rs  mod.rs  numbers_match_lobby_config.rs  puzzle2048_lobby_config.rs  snake_lobby_config.rs  tictactoe_lobby_config.rs
desktop-client/src/offline/: broadcaster.rs  local_game.rs  mod.rs  numbers_match_runner.rs  puzzle2048_runner.rs
desktop-client/src/ui/: menu.rs  mod.rs  username_prompt.rs
desktop-client/src/ui/game/: game_ui.rs  mod.rs  numbers_match.rs  puzzle2048.rs  snake.rs  tictactoe.rs
docs/: ReplayFiles.md
network-bots/: GameNetworkHandler.cs  LoggingInterceptor.cs  MiniGameNetworkBot.csproj  MiniGameNetworkBot.slnx  MiniGameNetworkBot.slnx.DotSettings  Program.cs  README.md  README.txt  Settings.cs
proto/: game_service.proto  replay.proto
server/: Cargo.toml  build.rs
server/benches/: minimax_bench.rs
server/src/: bot.rs  broadcaster.rs  cleanup_task.rs  config.rs  connection_tracker.rs  game.rs  game_broadcaster.rs  game_service.rs  game_session_manager.rs  grpc_service.rs  identifiers.rs  lib.rs  lobby_manager.rs  logger.rs  main.rs  menu_service.rs  message_handler.rs  replay_session.rs  server_config.rs  service.rs  validate_lobby_settings.rs  web_server.rs  ws_handler.rs
server/src/config/: config_content_provider.rs  config_manager.rs  config_serializer.rs  mod.rs  validate.rs
server/src/games/: bot_type.rs  broadcaster.rs  game_session.rs  lobby_settings.rs  mod.rs  replay_mode.rs  resolver.rs  session_config.rs  session_rng.rs  traits.rs
server/src/games/numbers_match/: board.rs  game_state.rs  mod.rs  replay.rs  session.rs  settings.rs  types.rs  validate.rs
server/src/games/puzzle2048/: game_state.rs  mod.rs  replay.rs  session.rs  settings.rs  types.rs  validate.rs
server/src/games/snake/: bot_controller.rs  entity.rs  game_state.rs  mod.rs  replay.rs  session.rs  settings.rs  types.rs  validate.rs
server/src/games/stack_attack/: box_entity.rs  crane.rs  field.rs  game_state.rs  mod.rs  replay.rs  session.rs  settings.rs  types.rs  validate.rs  worker.rs
server/src/games/tictactoe/: board.rs  bot_controller.rs  game_state.rs  mod.rs  replay.rs  session.rs  settings.rs  types.rs  validate.rs  win_detector.rs
server/src/lobby/: bot_type.rs  identity.rs  manager.rs  mod.rs  settings.rs  state.rs
server/src/replay/: file_io.rs  mod.rs  player.rs  recorder.rs  session.rs
web-client/: .gitignore  buf.gen.yaml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+83 files in other folders)
