[workspace]
members = [
    "server",
    "client",
    "common",
]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"
large_enum_variant = "allow"

[workspace.package]
version = "0.7.0"
edition = "2024"

[profile.bench]
debug = true

[workspace.dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
criterion = "0.8.1"
eframe = "0.33.3"
egui = "0.33.3"
image = "0.25.9"
prost = "0.14.1"
protoc-bin-vendored = "3.2.0"
rand = "0.9.2"
rfd = "0.17.1"
ringbuffer = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
