[package]
name = "snake_game_client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snake_game_client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
names = { version = "0.14", default-features = false }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.30"
egui = "0.30"
