[package]
name = "snake_game_client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snake_game_client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
prost = "0.14.1"