[package]
name = "mini_games_client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mini_games_client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
image = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
ringbuffer = "0.16.0"

