[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
rand = "0.9.2"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1", features = ["sync", "time", "rt"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3.2.0"
