[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
rand.workspace = true
chrono.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

