[package]
name = "mini_games_client"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "mini_games_client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tokio-stream.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
serde.workspace = true
rand.workspace = true
ringbuffer.workspace = true
rfd.workspace = true
chrono.workspace = true

