[package]
name = "mini_games_server"
version.workspace = true
edition.workspace = true

[lib]
name = "mini_games_server"
path = "src/lib.rs"

[[bin]]
name = "mini_games_server"
path = "src/main.rs"

[[bench]]
name = "minimax_bench"
harness = false

[dependencies]
common = { path = "../common" }
clap.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
