[package]
name = "mini_games_server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "mini_games_server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
clap.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rand.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true
prost.workspace = true

